--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,6 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
   border-radius: 0;
   background: transparent;
   box-shadow: none;
-  border-bottom: 1px solid #ccc;
 }
 .panel-title a{
   display: flex;
@@ -18,6 +17,44 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
   font-family: "Playfair Display",Georgia,serif;  
   font-size: 18px;
   color: #000;
+  writing-mode: vertical-lr;
+  position: relative;
+}
+.accordion-title{
+  font-size: 14px;
+  letter-spacing: 1em;
+  position:absolute;
+  left:-35px;
+  top:100px;
+  font-family: Karla,Arial,sans-serif;
+  text-transform: uppercase;
+  color: rgba(0,0,0,.8);
+  display: flex;
+  align-items: center;
+}
+.accordion-title:before{
+  content:"";
+  background: #000;
+  width: 50px;
+  height: 1px;
+  position: relative;
+  top: -36px;
+}
+.accordion-title:after{
+  content:"";
+  background: #000;
+  width: 50px;
+  height: 1px;
+}
+.panel-heading a[aria-expanded="false"] .accordion-title:before{
+  display: none;
+}
+.panel-heading a[aria-expanded="true"] .accordion-title:before{
+  transform: rotate(90deg);
+}
+.panel-heading a[aria-expanded="true"] .accordion-title:after{
+  transform: rotate(90deg);
+    margin-top: 20px;
 }
 .panel-title a:hover,
 .panel-title a:focus{
@@ -27,6 +64,13 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
   color: #f88282;
 }
 .panel-title a:hover .icon-wrap{
+  background-color: #f88282;
+}
+.panel-title a:hover .accordion-title{
+  color: #f88282;
+}
+.panel-title a:hover .accordion-title:after,
+.panel-title a:hover .accordion-title:before{
   background-color: #f88282;
 }
 .icon-wrap{
@@ -39,11 +83,26 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
   width: 22px;
   border-radius: 50%;
   color:#fff;
+  position: absolute;
+  left: -20px;
 }
 .panel-default>.panel-heading{
   background-color: transparent;
   border-color: transparent;
   padding: 0;
+}
+.panel-heading a[aria-expanded="false"]{
+  writing-mode: inherit;
+  position: relative;
+  left: -20px;
+  padding-left: 0;
+}
+.panel-heading a[aria-expanded="false"] .icon-wrap{
+  position: static;
+}
+.panel-heading a[aria-expanded="false"] .accordion-title{
+  position: static;
+  margin: 0;
 }
 .panel-heading a[aria-expanded="false"] .icon-plus2{
   display: block;
@@ -56,4 +115,29 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 }
 .panel-heading a[aria-expanded="true"] .icon-plus2{
   display: none;
+}
+@media screen and (max-width:768px){
+  .accordion-title{
+    left: -30px;
+  }
+  .icon-wrap,
+  .panel-heading a[aria-expanded="false"]{
+    left: -15px;
+  }
+}
+@media screen and (max-width:540px){
+  .accordion-title{
+    letter-spacing: 0.3em;
+  }
+  .panel-heading a[aria-expanded="true"] .accordion-title:after{
+    position: relative;
+    top: 10px;
+  }
+  .accordion-title{
+    left: -25px;
+  }
+  .icon-wrap,
+  .panel-heading a[aria-expanded="false"]{
+    left: -10px;
+  }
 }
